# frogmouth

./: .mise.toml  README.md  pyproject.toml
frogmouth/app/: app.py
frogmouth/screens/: main.py
