[project]
name = "frogmouth"
version = "0.9.2"
description = "A Markdown document viewer for the terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "Dave Pearson", email = "dave@textualize.io" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Other Audience",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "textual>=1.0.0",
    "typing-extensions>=4.5.0",
    "httpx>=0.28.1",
    "xdg-base-dirs>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/Textualize/frogmouth"

[project.scripts]
frogmouth = "frogmouth.app.app:run"

[dependency-groups]
dev = [
    "textual-dev>=1.1",
    "mypy>=1.1.1",
    "pylint>=2.17.1",
    "pre-commit>=3.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
